<resources>
    <string name="app_name">HepsiburadaCaseStudy</string>
    <string name="music">Music</string>
    <string name="movies">Movies</string>
    <string name="apps">Apps</string>
    <string name="books">Books</string>
    <string name="no_results">Ups!… no results found\nPlease try another search</string>
    <string name="search">Search</string>
    <string name="content_not_found">Content not found…</string>
    <string name="content_image">Content image</string>
    <string name="back_button">Back button</string>
    <string name="retry">retry</string>
</resources>