<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|enterAlways">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/card_text_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:startIconDrawable="@drawable/ic_baseline_search_24">

                    <EditText
                        android:id="@+id/editTextSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/search"
                        android:imeOptions="actionSearch"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions"
                        tools:text="rihanna" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggleButtons"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:focusable="false"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayout"
                    app:singleSelection="true">

                    <Button
                        android:id="@+id/buttonMovies"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:text="@string/movies" />

                    <Button
                        android:id="@+id/buttonMusic"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:text="@string/music" />

                    <Button
                        android:id="@+id/buttonApps"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:text="@string/apps" />

                    <Button
                        android:id="@+id/buttonBooks"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:text="@string/books" />

                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewContentList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/card_text_padding"
                android:scrollbars="vertical"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                tools:listitem="@layout/content_list_item" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <ImageView
            android:id="@+id/imageNoResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/no_results"
            android:src="@drawable/ic_no_results"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textNoResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_results"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/imageNoResults" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>