<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$Behavior"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll">

            <ImageButton
                android:id="@+id/buttonBack"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/back_button"
                android:focusable="true"
                android:padding="@dimen/button_padding"
                android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />
        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll">

            <ImageView
                android:id="@+id/imageArtWork"
                android:layout_width="match_parent"
                android:layout_height="@dimen/content_detail_image_height"
                android:contentDescription="@string/content_image"
                android:scaleType="fitXY"
                android:transitionName="imageView_artWork"
                app:layout_collapseMode="parallax"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textCollectionName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_text_margin"
                android:padding="@dimen/card_text_padding"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toStartOf="@id/textCollectionPrice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Content Name" />

            <TextView
                android:id="@+id/textCollectionPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_text_margin"
                android:padding="@dimen/card_text_padding"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Price" />

            <TextView
                android:id="@+id/textReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_text_margin"
                android:padding="@dimen/card_text_padding"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textCollectionName"
                tools:text="release date" />

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_text_margin"
                android:padding="@dimen/card_text_padding"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:attr/textColorSecondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textReleaseDate"
                tools:text="Description" />

            <ImageView
                android:id="@+id/imageNoResults"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_not_found"
                android:src="@drawable/ic_no_results"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textNotFound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/content_not_found"
                android:textAlignment="center"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/imageNoResults" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>